<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textAlignment="center"
            android:text="@string/app_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/id_title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/id_agenda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/id_hint"
                    android:textAlignment="center"
                    android:inputType="number"/>

            </LinearLayout>

            <View
                android:layout_width="20dp"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/fecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_hint"
                    android:textAlignment="center"
                    android:inputType="date"/>

            </LinearLayout>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subject_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/asunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject_hint"
            android:textAlignment="center"
            android:inputType="textEmailSubject"
            android:maxLines="1"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/actividad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_hint"
            android:textAlignment="center"
            android:inputType="textMultiLine"
            android:maxLines="2"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:onClick="insert"
                android:text="@string/insert_title_btn" />

            <View
                android:layout_width="25dp"
                android:layout_height="match_parent"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:onClick="consult"
                android:text="@string/consult_title_btn" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>